syntax = "proto3";

option csharp_namespace = "MyDNA.GrpcService.DatTT.Protos";

service FeedBackRatingDatTTGRPC {
  rpc GetAllAsync(EmptyRequest) returns (FeedBackRatingResponseList);
  rpc GetByIdAsync(FeedBackRatingRequest) returns (FeedBackRatingResponse);
  rpc CreateAsync(FeedBackRatingRequestUpdate) returns (MutationResult);
  rpc UpdateAsync(FeedBackRatingRequestUpdate) returns (MutationResult);
  rpc DeleteAsync(FeedBackRatingRequest) returns (MutationResult);

}

message EmptyRequest {}


message FeedBackRatingResponseList 
{
  repeated FeedBackRatingResponse Items = 1;
}

message FeedBackRatingRequest
{
	int32 feedBackRatingDatTtid = 1;
}

message FeedBackRatingRequestUpdate
{
  int32 feedBackRatingDatTtid = 1;
  int32 serviceDatTtid = 2;
  uint32 rating = 3;
  string writerName = 4;
  string title = 5;
  string content = 6;
  bool isVisible = 7;
  string updatedAt = 8;
  int32 feedbackScore = 9;
}

message FeedBackRatingResponse 
{
  int32 feedBackRatingDatTtid = 1;
  int32 serviceDatTtid = 2;
  uint32 rating = 3; 
  string writerName = 4;
  string title = 5;
  string content = 6;
  bool isVisible = 7;
  string createdAt = 8;
  string updatedAt = 9;
  int32 feedbackScore = 10;
  ///public virtual ServiceDatTT ServiceDatTt { get; set; }
}

message MutationResult
{
	int32 result = 1;
}
